changed errstats tool to use logtekst as designator for abb

--- a/ABBCommTest/ABBCommTest.csproj
+++ b/ABBCommTest/ABBCommTest.csproj
@@ -100,6 +100,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="ABBCommTest_TemporaryKey.pfx" />
+    <Content Include="pino.xml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
