--- a/EqUiWebUi/packages.config
+++ b/EqUiWebUi/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
+  <package id="HtmlAgilityPack" version="1.5.5" targetFramework="net451" />
   <package id="htmldiff.net" version="1.3" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net451" />
