--- a/EqUiWebUi/packages.config
+++ b/EqUiWebUi/packages.config
@@ -3,6 +3,9 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net451" />
+  <package id="Hangfire" version="1.6.17" targetFramework="net451" />
+  <package id="Hangfire.Core" version="1.6.17" targetFramework="net451" />
+  <package id="Hangfire.SqlServer" version="1.6.17" targetFramework="net451" />
   <package id="HtmlAgilityPack" version="1.5.5" targetFramework="net451" />
   <package id="htmldiff.net" version="1.3" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
@@ -10,9 +13,12 @@
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net451" />
+  <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
