--- a/EqUiWebUi/packages.config
+++ b/EqUiWebUi/packages.config
@@ -10,6 +10,7 @@
   <package id="HtmlAgilityPack" version="1.5.5" targetFramework="net451" />
   <package id="htmldiff.net" version="1.3" targetFramework="net451" />
   <package id="jQuery" version="3.2.1" targetFramework="net451" />
+  <package id="log4net" version="2.0.8" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
