--- a/EQUIToolsLib/EQUIToolsLib.csproj
+++ b/EQUIToolsLib/EQUIToolsLib.csproj
@@ -125,6 +125,12 @@
     <Compile Include="SBCUStats.Designer.cs">
       <DependentUpon>SBCUStats.cs</DependentUpon>
     </Compile>
+    <Compile Include="SleepBlock.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SleepBlock.Designer.cs">
+      <DependentUpon>SleepBlock.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AssetStats.resx">
@@ -153,6 +159,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SBCUStats.resx">
       <DependentUpon>SBCUStats.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SleepBlock.resx">
+      <DependentUpon>SleepBlock.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
