--- a/ABBCommTest/ABBCommTest.csproj
+++ b/ABBCommTest/ABBCommTest.csproj
@@ -101,6 +101,7 @@
     </Compile>
     <None Include="ABBCommTest_TemporaryKey.pfx" />
     <Content Include="pino.xml" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
