--- a/EQUICommunictionLib/packages.config
+++ b/EQUICommunictionLib/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Sharepoint.2013.Client.16" version="1.0.0" targetFramework="net40" />
   <package id="Oracle.ManagedDataAccess" version="12.2.1100" targetFramework="net40" />
+  <package id="SimpleImpersonation" version="2.0.1" targetFramework="net40" />
 </packages>
