--- a/EqUi_UtilManger/packages.config
+++ b/EqUi_UtilManger/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net45" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net45" />
+  <package id="SimpleImpersonation" version="2.0.1" targetFramework="net451" />
 </packages>
