--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -270,7 +270,9 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Web.config" />
+    <Content Include="Views\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -294,6 +296,10 @@
     <Content Include="Views\Tableau\logDetails.cshtml" />
     <Content Include="Views\Sharepoint\Index.cshtml" />
     <Content Include="Views\Sharepoint\AddNewIusse.cshtml" />
+    <Content Include="Views\Tableau\Index.cshtml" />
+    <Content Include="Views\Tableau\LongTerm_Layout_STO_NGAC.cshtml" />
+    <Content Include="Views\Tableau\LongTerm_Treemap_STO_NGAC.cshtml" />
+    <Content Include="Views\Tableau\LongTerm_Layout_STW040_MAXIMO.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EQUICommunictionLib\EQUICommunictionLib.csproj">
