--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Controllers\DynamicController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\PdfController.cs" />
+    <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="Controllers\SharepointController.cs" />
     <Compile Include="Controllers\TableauController.cs" />
     <Compile Include="Models\AAOSR_PloegRaportV2_Result.cs">
@@ -176,10 +177,10 @@
     <Compile Include="Models\TipMonitor.cs">
       <DependentUpon>GadataDatamodel.tt</DependentUpon>
     </Compile>
+    <Compile Include="EquiRoleProvider.cs" />
     <Compile Include="Models\UserPermisions.cs">
       <DependentUpon>GadataDatamodel.tt</DependentUpon>
     </Compile>
-    <Compile Include="EquiRoleProvider.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Controllers\DifftableController.cs" />
     <Compile Include="Controllers\GadataController.cs" />
@@ -212,6 +213,7 @@
       <DependentUpon>GadataDatamodel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExtenstions.cs" />
     <Compile Include="WebGridHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -680,13 +682,16 @@
     <Content Include="Views\Tableau\EmbeddedDesktop.cshtml" />
     <Content Include="Views\Tableau\Embedded4K.cshtml" />
     <Content Include="Views\Web.config" />
-    <Content Include="Views\Home\Settings.cshtml" />
     <Content Include="Views\Pdf\RenderPdf.cshtml" />
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Error\AccessDenied.cshtml" />
     <Content Include="Views\Error\InternalServerError.cshtml" />
     <Content Include="Views\Maximo\workordersOnLocation.cshtml" />
+    <Content Include="Views\Dynamic\DynamicDatatable.cshtml" />
+    <Content Include="Views\Settings\Index.cshtml" />
+    <Content Include="Views\Settings\GetUserGrants.cshtml" />
+    <Content Include="Views\Maximo\workorders.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EQUICommunictionLib\EQUICommunictionLib.csproj">
