--- a/EqUiWebUi/packages.config
+++ b/EqUiWebUi/packages.config
@@ -2,12 +2,13 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
   <package id="bootstrap" version="3.3.7" targetFramework="net451" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
   <package id="Grid.Mvc" version="3.0.0" targetFramework="net451" />
+  <package id="Grid.Mvc.Redux" version="1.0.4" targetFramework="net46" />
   <package id="Hangfire" version="1.6.17" targetFramework="net451" />
   <package id="Hangfire.Core" version="1.6.17" targetFramework="net451" />
   <package id="Hangfire.SqlServer" version="1.6.17" targetFramework="net451" />
-  <package id="HtmlAgilityPack" version="1.5.5" targetFramework="net451" />
+  <package id="HtmlAgilityPack" version="1.6.5" targetFramework="net46" />
   <package id="htmldiff.net" version="1.3" targetFramework="net451" />
   <package id="jQuery" version="3.2.1" targetFramework="net451" />
   <package id="log4net" version="2.0.8" targetFramework="net451" />
@@ -20,6 +21,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.8.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net451" />
+  <package id="NonFactors.Grid.Core.Mvc5" version="4.2.0" targetFramework="net46" />
+  <package id="NonFactors.Grid.Mvc5" version="4.2.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
