--- a/EQUIToolsLib/EQUIToolsLib.csproj
+++ b/EQUIToolsLib/EQUIToolsLib.csproj
@@ -88,6 +88,12 @@
     <Compile Include="DocManager.Designer.cs">
       <DependentUpon>DocManager.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditControlLimits.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditControlLimits.Designer.cs">
+      <DependentUpon>EditControlLimits.cs</DependentUpon>
+    </Compile>
     <Compile Include="ErrorStats.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,6 +147,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DocManager.resx">
       <DependentUpon>DocManager.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditControlLimits.resx">
+      <DependentUpon>EditControlLimits.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ErrorStats.resx">
       <DependentUpon>ErrorStats.cs</DependentUpon>
