--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -7,10 +7,10 @@
     </configSections>
     <connectionStrings>
         <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString"
-            connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=GADATA;Password=GADATA987"
+            connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUi;Password=EqUi"
             providerName="System.Data.SqlClient" />
         <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GadataConnRW"
-            connectionString="Data Source=sqla001.gen.volvocars.net;Persist Security Info=True;User ID=GADATA;Password=GADATA987" />
+            connectionString="Data Source=sqla001.gen.volvocars.net;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" />
     </connectionStrings>
     <userSettings>
         <ExcelAddInEquipmentDatabase.Properties.Settings>
