--- a/EqUiWebUi/packages.config
+++ b/EqUiWebUi/packages.config
@@ -9,7 +9,7 @@
   <package id="Hangfire.SqlServer" version="1.6.17" targetFramework="net451" />
   <package id="HtmlAgilityPack" version="1.6.7" targetFramework="net46" />
   <package id="htmldiff.net" version="1.3" targetFramework="net451" />
-  <package id="jQuery" version="1.9.1" targetFramework="net46" />
+  <package id="jQuery" version="3.2.1" targetFramework="net46" />
   <package id="log4net" version="2.0.8" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
@@ -19,6 +19,7 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.8.3" targetFramework="net451" />
+  <package id="Moment.js" version="2.19.4" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net451" />
   <package id="NonFactors.Grid.Core.Mvc5" version="4.2.0" targetFramework="net46" />
   <package id="NonFactors.Grid.Mvc5" version="4.2.0" targetFramework="net46" />
